# Vietnamese-AI-Dubbing

./: .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  AI_AGENT_GUIDE.md  DEVELOPMENT_PLAN.md  README.md  main.py  main_clean.py  pyproject.toml  requirements.txt  run_both.py  run_webui.py  setup.cfg  webui.py  webui_fixed.py
backend/: README.md  main.py  requirements-dev.txt  setup.py
backend/app/: __init__.py
backend/app/api/: __init__.py
backend/app/api/api_v1/: __init__.py  api.py
backend/app/api/api_v1/endpoints/: health.py  jobs.py  users.py  video_processing.py
backend/app/core/: __init__.py  config.py  database.py  exceptions.py  logging.py
backend/app/services/: __init__.py  main_service.py  service_cache.json  video_processor.py
backend/app/services/audio_separator/: __init__.py  service.py
backend/app/services/speech_recognition/: __init__.py  service.py
backend/app/services/text_to_speech/: __init__.py  service.py
backend/app/services/translation/: __init__.py  service.py
backend/app/services/video_downloader/: __init__.py  service.py
backend/app/services/video_synthesis/: __init__.py  service.py
backend/app/utils/: __init__.py  file_handler.py
config/: settings.py
frontend/: .env.example  README.md  index.html  metadata.json  package-lock.json  package.json  setup.js
frontend/src/: App.css  App.tsx  constants.ts  index.css  main.tsx  types.ts
frontend/src/api/: client.ts
frontend/src/components/: Header.tsx  ProgressBar.tsx  Result.tsx  Settings.tsx  SpeechRecognition.tsx  SubtitleTranslator.tsx  TabSelector.tsx  VideoDownloader.tsx  VideoInput.tsx  VideoPreview.tsx  VideoSynthesizer.tsx  VoiceSeparator.tsx
frontend/src/pages/: AboutPage.tsx  HomePage.tsx  JobsPage.tsx  SettingsPage.tsx
frontend/src/router/: index.tsx
frontend/src/store/: useAppStore.ts
modules/: __init__.py  audio_separator.py  speech_recognition.py  text_to_speech.py  translator.py  video_downloader.py  video_processor.py
static/css/: style.css
static/js/: main.js
static/templates/: base.html
